# extractpak

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTES_v1.0.0.md  extractpak.c  install.sh  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  pages.yml  (+1 more)
docs/: builder-independence-roadmap.md  mi1-ultimate-talkie-builder-analysis.md  mi2-ultimate-talkie-builder-analysis.md  scripts-audit.md
licenses/: original_ute_builder.txt
scripts/: build-mi1-talkie.sh  build-mi2-talkie.sh  build-monster.py  extract-xwb.py  inject-mi1-sbl.py  process-mi1-music.sh  process-mi1-sbl.sh  process-mi1-voices.sh  process-mi2-voices.sh  release.sh  test-install.sh
scummkit/: __init__.py  bsdiff.py  builder_inputs.py  cli.py  doctor.py  mi1.py  mi1_ambience.py  mi1_resources.py  mi1_room_audio.py  mi1_sbl.py  mi1_sbl_data.py  mi1_script_decode.py  mi1_script_refs.py  mi2.py  monster.py  music.py  pak.py  patch_classify.py  paths.py  progress.py  runner.py  sbl.py  sound_plan.py  speech_manifest.py  summary.py  voices.py  xwb.py
site/: README.md  index.html  package-lock.json  package.json  vite.config.ts
talkiebuilder/: __init__.py  audio.py  cli.py  mi1.py  mi1_sbl.py  monster.py  paths.py  xwb.py
tests/: test_bsdiff.py  test_cli.py  test_install_script.py  test_mi1_ambience.py  test_mi1_room_audio.py  test_mi1_sbl_data.py  test_mi1_script_decode.py  test_mi1_script_refs.py  test_monster.py  test_pak.py  test_patch_classify.py  test_patch_diff.py  test_sbl.py  test_sound_plan.py  test_speech_manifest.py  test_xwb.py
(+23 files in other folders)
